--- a/Analyzeiris.ipynb
+++ b/Analyzeiris.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris.PlotFeatureImportancesAll()"
+    "# iris.PlotFeatureImportancesAll()"
    ]
   },
   {
@@ -217,7 +217,7 @@
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43miris\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPlotFeatureHistgram\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\kyabe\\OneDrive\\デスクトップ\\Work\\WALC\\iris\\AnalyzeIris.py:367\u001b[0m, in \u001b[0;36mAnalyzeIris.PlotFeatureHistgram\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    364\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Show histgrams of the frequency for each feature in various range. \u001b[39;00m\n\u001b[0;32m    365\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    366\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mX, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my\n\u001b[1;32m--> 367\u001b[0m feature_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miris_dataset\u001b[49m\u001b[38;5;241m.\u001b[39mfeature_names\n\u001b[0;32m    368\u001b[0m target_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miris_dataset\u001b[38;5;241m.\u001b[39mtarget_names  \u001b[38;5;66;03m# クラス名を修正\u001b[39;00m\n\u001b[0;32m    369\u001b[0m colors \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# クラスごとの色を指定\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\kyabe\\OneDrive\\デスクトップ\\Work\\WALC\\iris\\AnalyzeIris.py:358\u001b[0m, in \u001b[0;36mAnalyzeIris.PlotFeatureHistgram\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    355\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Show histgrams of the frequency for each feature in various range. \u001b[39;00m\n\u001b[0;32m    356\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    357\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mX, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39my\n\u001b[1;32m--> 358\u001b[0m feature_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miris_dataset\u001b[49m\u001b[38;5;241m.\u001b[39mfeature_names\n\u001b[0;32m    359\u001b[0m target_names \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39miris_dataset\u001b[38;5;241m.\u001b[39mtarget_names  \u001b[38;5;66;03m# クラス名を修正\u001b[39;00m\n\u001b[0;32m    360\u001b[0m colors \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mblue\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mred\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgreen\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# クラスごとの色を指定\u001b[39;00m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'AnalyzeIris' object has no attribute 'iris_dataset'"
      ]
     }
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
