--- a/Analyzeiris.ipynb
+++ b/Analyzeiris.ipynb
@@ -326,12 +326,12 @@
     }
    ],
    "source": [
-    "df_X_scaled, df_pca, pca = iris.PlotPCA(n_components=2)"
+    "X_scaled, df_pca, pca = iris.PlotPCA(n_components=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "df_X, df_nmf, nmf = iris.PlotNMF(n_components=2)"
+    "X, df_nmf, nmf = iris.PlotNMF(n_components=2)"
    ]
   },
   {
